@@ -1,4 +1,9 @@
 2014-07-25 John Morris <john.morris@cern.ch>
+	* Pass by refernece in TriggerTower_v2::initialize fix
+	* Change from unsigned int to uint_least8_t for TriggerTowerAuxContainer_v2
+	* Tagging as xAODTrigL1Calo-00-00-09
+
+2014-07-25 John Morris <john.morris@cern.ch>
 	* Adding a prototype run2 TriggerTower
 	* Tagging as xAODTrigL1Calo-00-00-08
 
